# KMCrayfish

./: .gitmodules  Cargo.toml  README.md
src/: kmer.rs  main.rs  main_io.rs
