[package]
name = "kmcrayfish"
version = "0.1.0"
authors = ["JX Wang <jxwang92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crayfish = { path = "./crayfish/crayfish", features=["net-mpi"]} 
rustc-hash = "1.1"
voracious_radix_sort = "1.1"
memmap = "0.7"
memchr = "2.4"

[[bin]]
name = "kmcrayfish2"
path = "src/main_io.rs"

[profile.release]
debug = true
